--- a/css/project.css
+++ b/css/project.css
@@ -37,8 +37,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        text-align: center;
         max-width: 12em;
-        height: 3em;
+        height: 5em;
         background-color: var(--accent-3);
         border-radius: 14px;
         padding: 0 1em;
