--- a/css/project.css
+++ b/css/project.css
@@ -39,11 +39,14 @@
         align-items: center;
         text-align: center;
         max-width: 12em;
-        height: 5em;
+        height: 3em;
         background-color: var(--accent-3);
         border-radius: 14px;
         padding: 0 1em;
         cursor: pointer;
         white-space:pre-wrap;
+    }
+    .reverse-archive-button > p {
+        font-size: 16px;
     }
 }
