--- a/css/project.css
+++ b/css/project.css
@@ -51,4 +51,7 @@
     .reverse-archive-button > p {
         font-size: 16px;
     }
+    .reverse-archive-button:hover > p {
+        color: var(--background-color);
+    }
 }
