added an else condition to the archive/unarchive button area to show a message to archive a current project if the number of current projects is 5

--- a/css/project.css
+++ b/css/project.css
@@ -56,4 +56,13 @@
     .reverse-archive-button:hover > a {
         color: var(--accent-2);
     }
+    .warning-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .warning-wrapper > h2 {
+        color: var(--warning);
+    }
 }
