--- a/css/project.css
+++ b/css/project.css
@@ -61,6 +61,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        height: 4em;
     }
     .warning-wrapper > h2 {
         color: var(--warning);
