--- a/css/newProject.css
+++ b/css/newProject.css
@@ -178,6 +178,7 @@
         grid-column: span 2;
         justify-content: space-between;
         align-items: center;
+        min-height: 5em;
         padding: 0 2em;
     }
     #cancel {
