--- a/css/project.css
+++ b/css/project.css
@@ -70,5 +70,7 @@
         position: absolute;
         right: 0;
         padding: 1em 2em 0 0;
+        font-size: 18px;
+        cursor: pointer;
     }
 }
