--- a/css/project.css
+++ b/css/project.css
@@ -69,7 +69,7 @@
     #projectUpdate {
         position: absolute;
         right: 0;
-        padding: 1em 2em 0 0;
+        padding: 0 2em 0 0;
         font-size: 22px;
         cursor: pointer;
     }
