--- a/css/project.css
+++ b/css/project.css
@@ -77,3 +77,10 @@
         cursor: pointer;
     }
 }
+
+@media only screen and (min-width: 1000px) {
+    #projectUpdate {
+        font-size: 26px;
+        padding: 0.5em 2em 0 0;
+    }
+}
