--- a/css/project.css
+++ b/css/project.css
@@ -1,11 +1,15 @@
 @media only screen and (min-width: 200px) {
     .archive-wrapper {
-        display: flex;
+        /* display: flex;
         justify-content: end;
         align-items: center;
         width: 100%;
         height: 4em;
-        padding-right: 0.8em;
+        padding-right: 0.8em; */
+        display: grid;
+        grid-template-columns: 20% 60% 20%;
+        place-items: center;
+        height: 5em;
     }
     .archive-button {
         display: flex;
