--- a/css/project.css
+++ b/css/project.css
@@ -22,6 +22,7 @@
         padding: 0 1em;
         cursor: pointer;
         white-space:pre-wrap;
+        grid-column-start: 3;
     }
     .archive-button > a {
         font-size: 16px;
