--- a/css/home.css
+++ b/css/home.css
@@ -445,6 +445,7 @@
     }
     #outline-popup {
         translate: 6em -4em;
+        border-radius: 16px 16px 0 16px;
     }
     #journey-popup {
         translate: -6em -5.5em;
