--- a/css/home.css
+++ b/css/home.css
@@ -407,10 +407,10 @@
         position: relative;
     }
     #first-daily-popup {
-        position: absolute;
+        /* position: absolute;
         top: 0;
-        right: 0;
-        /* translate: 6em -4em; */
+        right: 0; */
+        translate: 6em -4em;
     }
     #quarter-quomplete-popup {
         translate: 6em -5em;
@@ -492,7 +492,10 @@
         border-radius: 16px 16px 0 16px;
     }
     #finish-him-popup {
-        translate: -6em -4.5em;
+        /* translate: -6em -4.5em; */
+        position: absolute;
+        top: 0;
+        right: 0;
         border-radius: 16px 16px 0 16px;
     }
 }
