--- a/css/home.css
+++ b/css/home.css
@@ -493,8 +493,8 @@
     }
     #finish-him-popup {
         translate: -6em -4.5em;
-        /* position: absolute;
-        top: 0;
+        position: absolute;
+        /* top: 0;
         right: 0; */
         border-radius: 16px 16px 0 16px;
     }
