--- a/css/style.css
+++ b/css/style.css
@@ -324,9 +324,9 @@ a {
         align-items: center;
     }
     .badgeToPopup {
-        display: none;
+        /* display: none;
         position: absolute;
-        top: 0;
+        top: 0; */
         z-index: 2;
         flex-direction: column;
         align-items: center;
