--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,7 @@ a {
 
     /** BADGE POPUPS*/
     .badge-wrapper {
-        position: relative;
+        /* position: relative; */
         display: flex;
         justify-content: center;
         align-items: center;
