--- a/css/home.css
+++ b/css/home.css
@@ -417,6 +417,7 @@
     }
     #quarter-quomplete-popup {
         /* translate: 6em -5em; */
+        top: 0;
         position: absolute;
     }
     #half-way-popup {
