--- a/css/home.css
+++ b/css/home.css
@@ -472,10 +472,12 @@
         border-radius: 16px 16px 0 16px;
     }
     #ever-persist-popup {
-        translate: 6em -3em;
+        translate: -6em -3em;
+        border-radius: 16px 16px 0 16px;
     }
     #back-it-up-popup {
-        translate: 6em -5.5em;
+        translate: -6em -5.5em;
+        border-radius: 16px 16px 0 16px;
     }
     #gathering-popup {
         translate: -6em -4em;
