--- a/css/style.css
+++ b/css/style.css
@@ -85,10 +85,10 @@
     }
      
 
-/* @font-face {
+@font-face {
     font-family: Luminari;
     src: url("https://www.elsewherewriters.com/fonts/luminari/Luminari-Regular.ttf");
-} */
+}
 
 
 /** UNIVERSAL*/
@@ -98,6 +98,12 @@ html {
 h1, h2, h3, h4, h5, h6, p {
     margin: 0;
     padding: 0;
+}
+h1, h2, h3, h4, h5, h6{
+    font-family: Luminari;
+}
+p {
+    font-family: Arial, Helvetica, sans-serif;
 }
 a {
     color: var(--accent-3);
