--- a/css/style.css
+++ b/css/style.css
@@ -429,7 +429,7 @@ a {
         justify-content: center;
         align-items: center;
     }
-    .desktop-navContent > a {
+    .desktop-navContent, .projects-container > a {
         font-family: Luminari;
     }
     .desktop-user img{
