--- a/css/home.css
+++ b/css/home.css
@@ -20,6 +20,7 @@
         padding: 0 1em;
         cursor: pointer;
         white-space:pre-wrap;
+        font-family: luminari;
     }
     .fa-caret-down {
         margin-left: 0.5em;
