moved the cursor pointer to the pulse class and off badge so auto badges don't have pointer

--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ a {
 }
 .pulse {
     transition: all 0.2s ease;
+    cursor: pointer;
 }
 /* .website-title {
     color: var(--accent-2);
@@ -301,7 +302,7 @@ a {
     .badge {
         width: 3.5em;
         height: fit-content;
-        cursor: pointer;
+        /* cursor: pointer; */
     }
     footer {
         display: grid;
