--- a/css/profile.css
+++ b/css/profile.css
@@ -361,6 +361,7 @@
     .user-container {
         flex-direction: column;
         align-items: center;
+        min-height: 20em;
         width: 40%;
         background-color: var(--accent-1);
         border: 2px solid var(--accent-3);
