--- a/css/profile.css
+++ b/css/profile.css
@@ -89,7 +89,8 @@
     .badge-container {
         display: grid;
         position: relative;
-        grid-template-columns: auto auto auto auto auto;
+        /* grid-template-columns: auto auto auto auto auto; */
+        grid-template-rows: auto auto auto;
         justify-content: center;
         align-items: center;
         gap: 1.5em 1em;
