--- a/css/profile.css
+++ b/css/profile.css
@@ -98,6 +98,9 @@
         padding: 1em 0.5em;
         background-color: var(--accent-1);
     }
+    #streak-fiend-wrapper {
+        grid-row-start: 2;
+    }
     #instruction {
         grid-column: span 5;
         font-size: 12px;
