--- a/css/profile.css
+++ b/css/profile.css
@@ -87,10 +87,12 @@
         font-size: 18px;
     }
     .badge-container {
-        display: grid;
+        /* display: grid;
         position: relative;
-        /* grid-template-columns: auto auto auto auto auto; */
-        grid-template-rows: auto auto auto;
+        grid-template-columns: auto auto auto auto auto;
+        grid-template-rows: auto auto auto; */
+        display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         gap: 1.5em 1em;
@@ -98,12 +100,12 @@
         padding: 1em 0.5em;
         background-color: var(--accent-1);
     }
-    #complete-one-project-wrapper {
+    /* #complete-one-project-wrapper {
         grid-row-start: 1;
     }
     #streak-fiend-wrapper {
         grid-row-start: 2;
-    }
+    } */
     #instruction {
         grid-column: span 5;
         font-size: 12px;
