--- a/css/profile.css
+++ b/css/profile.css
@@ -100,6 +100,10 @@
         padding: 1em 0.5em;
         background-color: var(--accent-1);
     }
+    .badge-row {
+        display: flex;
+        justify-content: space-evenly;
+    }
     /* #complete-one-project-wrapper {
         grid-row-start: 1;
     }
