--- a/css/profile.css
+++ b/css/profile.css
@@ -100,6 +100,9 @@
         padding: 1em 0.5em;
         background-color: var(--accent-1);
     }
+    .auto-badges {
+        width: 100%;
+    }
     .badge-row {
         display: flex;
         justify-content: space-evenly;
