--- a/css/profile.css
+++ b/css/profile.css
@@ -101,6 +101,8 @@
         background-color: var(--accent-1);
     }
     .auto-badges {
+        display: flex;
+        justify-content: center;
         width: 100%;
     }
     .badge-row {
