--- a/css/profile.css
+++ b/css/profile.css
@@ -102,6 +102,8 @@
     }
     .auto-badges {
         display: flex;
+        flex-direction: column;
+        align-items: center;
         justify-content: center;
         width: 100%;
     }
