--- a/css/profile.css
+++ b/css/profile.css
@@ -100,7 +100,7 @@
         padding: 1em 0.5em;
         background-color: var(--accent-1);
     }
-    .auto-badges {
+    .auto-badges, .toggle-badges {
         display: flex;
         flex-direction: column;
         align-items: center;
