--- a/css/profile.css
+++ b/css/profile.css
@@ -118,6 +118,9 @@
     #streak-fiend-wrapper {
         grid-row-start: 2;
     } */
+    .instruction-wrapper {
+        display: flex;
+     }
     #instruction {
         grid-column: span 5;
         font-size: 12px;
@@ -134,9 +137,9 @@
     .slider-container {
         display: flex;
         align-items: center;
-        position: absolute;
+        /* position: absolute;
         top: 0;
-        right: 0;
+        right: 0; */
         padding: 1em 0.5em 0 0;
     }
      /* The switch - the box around the slider */
