--- a/css/profile.css
+++ b/css/profile.css
@@ -140,7 +140,7 @@
         /* position: absolute;
         top: 0;
         right: 0; */
-        padding: 1em 0.5em 0 0;
+        padding: 0 0.5em 0 0;
     }
      /* The switch - the box around the slider */
     .switch {
