--- a/css/profile.css
+++ b/css/profile.css
@@ -111,6 +111,7 @@
         display: flex;
         justify-content: space-evenly;
         width: 100%;
+        margin: 0.5em 0;
     }
     /* #complete-one-project-wrapper {
         grid-row-start: 1;
