--- a/css/profile.css
+++ b/css/profile.css
@@ -123,7 +123,7 @@
         display: flex;
     }
     .instruction {
-        margin: 0.5em 0;
+        margin: 1em 0 0.5em 0;
     }
     #instruction {
         grid-column: span 5;
