--- a/css/profile.css
+++ b/css/profile.css
@@ -130,7 +130,7 @@
         font-size: 12px;
         justify-self: center;
         text-align: center;
-        padding: 0 1em;
+        padding: 0.5em 1em;
     }
     #badge-title {
         grid-column: span 5;
