--- a/css/profile.css
+++ b/css/profile.css
@@ -340,14 +340,15 @@
     #badge-title {
         padding-top: 0;
     }
-    .slider-container {
+    /* .slider-container {
         padding: 1em 1.5em 0 0;
-    }
+    } */
     #instruction {
         font-size: 18px;
     }
     .instruction {
         font-size: 18px;
+        margin: 1.5em 0 0.5em 0;
     }
 
 
