--- a/css/profile.css
+++ b/css/profile.css
@@ -338,7 +338,7 @@
         padding: 1.5em 2em;
     }
     #badge-title {
-        padding-top: 0;
+        padding-top: 1em;
     }
     /* .slider-container {
         padding: 1em 1.5em 0 0;
