--- a/css/profile.css
+++ b/css/profile.css
@@ -121,6 +121,7 @@
     } */
     .instruction-wrapper {
         display: flex;
+        align-items: center;
         margin: 1em 0;
     }
     .instruction {
