--- a/css/profile.css
+++ b/css/profile.css
@@ -312,9 +312,9 @@
         border-radius: 16px;
         cursor: pointer;
     }
-    footer {
+    /* footer {
         margin-top: 3em;
-    }
+    } */
 }
 
 
