--- a/css/profile.css
+++ b/css/profile.css
@@ -435,7 +435,7 @@
         background-color: var(--background-color);
         border-top: none;
         border-left: 2px solid var(--accent-1);
-        padding: 0 0.5em 1em 0.5em;
+        padding: 0 0.5em;
     }
     .slider {
         background-color: var(--accent-1);
