--- a/css/profile.css
+++ b/css/profile.css
@@ -418,7 +418,7 @@
         width: 50%;
     }
     .current-project-container {
-        padding: 0 2em 1em 2em;
+        padding: 0 2em;
     }
     #area-title {
         padding-top: 0.4em;
