--- a/css/project.css
+++ b/css/project.css
@@ -81,6 +81,17 @@
         font-size: 22px;
         cursor: pointer;
     }
+    .finish-popup-wrapper {
+        display: flex;
+        z-index: 10;
+        position: absolute;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px);
+    }
 }
 
 @media only screen and (min-width: 1000px) {
