--- a/css/project.css
+++ b/css/project.css
@@ -92,6 +92,19 @@
         -webkit-backdrop-filter: blur(5px);
         backdrop-filter: blur(5px);
     }
+    .finish-popup {
+        position: relative;
+        display: flex;
+        z-index: 1;
+        flex-direction: column;
+        height: fit-content;
+        width: 90%;
+        background-color: var(--accent-1);
+        border: 2px solid var(--accent-3);
+        border-radius: 16px;
+        padding: 1em;
+        margin-top: 6em;
+    }
 }
 
 @media only screen and (min-width: 1000px) {
