--- a/css/project.css
+++ b/css/project.css
@@ -105,6 +105,9 @@
         padding: 1em;
         margin-top: 6em;
     }
+    .finish-popup > h1 {
+        text-align: center;
+    }
 }
 
 @media only screen and (min-width: 1000px) {
