--- a/css/project.css
+++ b/css/project.css
@@ -114,7 +114,7 @@
     .finish-button {
         width: 5em;
         height: 2.5em;
-        background-color: var(--text-color);
+        background-color: var(--accent-3);
         color: var(--reverse-text-color);
         border: 2px solid var(--accent-2);
         border-radius: 16px;
