--- a/css/project.css
+++ b/css/project.css
@@ -116,6 +116,11 @@
         justify-content: center;
         align-items: center;
     }
+    .finish-button-wrapper > a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
     .finish-button {
         width: 5em;
         height: 2.5em;
