--- a/css/project.css
+++ b/css/project.css
@@ -116,12 +116,15 @@
         justify-content: center;
         align-items: center;
     }
-    .finish-button-wrapper > a {
+    /* .finish-button-wrapper > a {
         display: flex;
         justify-content: center;
         align-items: center;
-    }
+    } */
     .finish-button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 5em;
         height: 2.5em;
         background-color: var(--accent-3);
