--- a/css/project.css
+++ b/css/project.css
@@ -110,6 +110,7 @@
     }
     .finish-popup > p {
         font-size: 18px;
+        margin: 0.5em 0;
     }
     .finish-button-wrapper {
         display: flex;
