--- a/css/project.css
+++ b/css/project.css
@@ -116,7 +116,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin: 1em 0;
+        margin: 1em 0 0 0;
     }
     /* .finish-button-wrapper > a {
         display: flex;
