--- a/css/project.css
+++ b/css/project.css
@@ -112,7 +112,7 @@
         font-size: 18px;
         margin: 0.25em 0;
     }
-    .finish-popup > p:last-child {
+    .finish-popup:nth-child(5) {
         text-align: center;
     }
     .finish-button-wrapper {
