--- a/css/project.css
+++ b/css/project.css
@@ -107,14 +107,11 @@
     }
     .finish-popup > h1 {
         text-align: center;
+        margin-top: 0.5em;
     }
     .finish-popup > p {
         font-size: 18px;
         margin: 0.25em 0;
-    }
-    .finish-popup:nth-child(4) {
-        text-align: center;
-        color: red;
     }
     .finish-button-wrapper {
         display: flex;
