--- a/css/project.css
+++ b/css/project.css
@@ -1,14 +1,18 @@
 @media only screen and (min-width: 200px) {
     .archive-wrapper {
-        /* display: flex;
+        /* 
         justify-content: end;
         align-items: center;
-        width: 100%;
+        
         height: 4em;
         padding-right: 0.8em; */
-        display: grid;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        /* display: grid;
         grid-template-columns: 20% 60% 20%;
-        place-items: center;
+        place-items: center; */
+        width: 100%;
         height: 4em;
     }
     .archive-button {
@@ -17,6 +21,7 @@
         align-items: center;
         max-width: 12em;
         height: 3em;
+        text-decoration: none;
         background-color: var(--warning);
         border-radius: 14px;
         padding: 0 1em;
