--- a/css/project.css
+++ b/css/project.css
@@ -22,7 +22,7 @@
         max-width: 12em;
         height: 3em;
         text-decoration: none;
-        background-color: var(--warning);
+        background-color: var(--accent-2);
         border-radius: 14px;
         padding: 0 1em;
         cursor: pointer;
@@ -31,7 +31,7 @@
     }
     .archive-button > a {
         font-size: 16px;
-        color: var(--background-color);
+        color: var(--reverse-text-color);
     }
     .archive-button:hover > a {
         color: var(--accent-2);
