--- a/css/project.css
+++ b/css/project.css
@@ -24,14 +24,17 @@
         text-decoration: none;
         background-color: var(--accent-2);
         border-radius: 14px;
+        font-size: 16px;
+        color: var(--reverse-text-color);
         padding: 0 1em;
         cursor: pointer;
         white-space:pre-wrap;
         grid-column-start: 3;
     }
-    .archive-button > a {
-        font-size: 16px;
-        color: var(--reverse-text-color);
+    .archive-button > div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .archive-button:hover > a {
         color: var(--accent-2);
