--- a/css/project.css
+++ b/css/project.css
@@ -35,6 +35,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        text-align: center;
     }
     .archive-button:hover > a {
         color: var(--accent-2);
