--- a/css/project.css
+++ b/css/project.css
@@ -15,7 +15,7 @@
         width: 100%;
         height: 4em;
     }
-    .archive-button {
+    .archive-button, .complete-button {
         display: flex;
         justify-content: center;
         align-items: center;
