--- a/css/project.css
+++ b/css/project.css
@@ -22,7 +22,6 @@
         max-width: 6em;
         height: 3em;
         text-decoration: none;
-        background-color: var(--accent-2);
         border-radius: 14px;
         font-size: 16px;
         color: var(--reverse-text-color);
@@ -30,6 +29,12 @@
         cursor: pointer;
         white-space:pre-wrap;
         grid-column-start: 3;
+    }
+    .archive-button {
+        background-color: var(--accent-2);
+    }
+    .complete-button {
+        background-color: var(--accent-3);
     }
     .archive-button > div {
         display: flex;
