--- a/css/project.css
+++ b/css/project.css
@@ -103,7 +103,7 @@
         font-size: 22px;
         cursor: pointer;
     }
-    .finish-popup-wrapper {
+    .finish-popup-wrapper, .delete-popup-wrapper {
         display: none;
         z-index: 10;
         position: absolute;
@@ -114,7 +114,7 @@
         -webkit-backdrop-filter: blur(5px);
         backdrop-filter: blur(5px);
     }
-    .finish-popup {
+    .finish-popup, .delete-popup {
         position: relative;
         display: flex;
         z-index: 1;
@@ -135,7 +135,7 @@
         font-size: 18px;
         margin: 0.25em 0;
     }
-    .finish-button-wrapper {
+    .finish-button-wrapper, .delete-button-wrapper {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -146,18 +146,33 @@
         justify-content: center;
         align-items: center;
     } */
-    .finish-button {
+    .finish-button, .delete-project-button {
         display: flex;
         justify-content: center;
         align-items: center;
         width: 5em;
         height: 2.5em;
         text-decoration: none;
+        border-radius: 16px;
+        cursor: pointer;
+    }
+    .finish-button {
         background-color: var(--accent-3);
         color: var(--reverse-text-color);
         border: 2px solid var(--accent-3);
-        border-radius: 16px;
-        cursor: pointer;
+    }
+    .delete-project-button {
+        background-color: var(--warning);
+        color: var(--background-colortext-color);
+        border: 2px solid var(--warning);
+    }
+    .delete-popup > h1 {
+        text-align: center;
+        margin-top: 0.5em;
+    }
+    .delete-popup > p {
+        font-size: 18px;
+        margin: 0.25em 0;
     }
 }
 
