--- a/css/project.css
+++ b/css/project.css
@@ -15,7 +15,7 @@
         width: 100%;
         height: 4em;
     }
-    .archive-button, .complete-button {
+    .archive-button, .complete-button, .delete-button {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -36,7 +36,16 @@
     .complete-button {
         background-color: var(--accent-3);
     }
+    .delete-button {
+        background-color: var(--warning);
+    }
     .archive-button > div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    .delete-button > div {
         display: flex;
         justify-content: center;
         align-items: center;
