--- a/css/project.css
+++ b/css/project.css
@@ -47,11 +47,13 @@
         align-items: center;
         text-align: center;
     }
-    .delete-button > div {
+    .delete-button > a {
         display: flex;
         justify-content: center;
         align-items: center;
         text-align: center;
+        font-size: 16px;
+        color: var(--reverse-text-color);
     }
     .complete-button > a {
         display: flex;
