--- a/css/project.css
+++ b/css/project.css
@@ -132,6 +132,7 @@
         display: flex;
         z-index: 1;
         flex-direction: column;
+        align-items: center;
         height: fit-content;
         width: 90%;
         background-color: var(--accent-1);
