--- a/css/project.css
+++ b/css/project.css
@@ -148,6 +148,7 @@
     .finish-popup > p {
         font-size: 18px;
         margin: 0.25em 0;
+        text-align: center;
     }
     .finish-button-wrapper, .delete-button-wrapper {
         display: flex;
