--- a/css/project.css
+++ b/css/project.css
@@ -135,6 +135,7 @@
         align-items: center;
         height: fit-content;
         width: 90%;
+        text-align: center;
         background-color: var(--accent-1);
         border: 2px solid var(--accent-3);
         border-radius: 16px;
