--- a/css/archives.css
+++ b/css/archives.css
@@ -32,7 +32,7 @@
         top: 0;
         right: 0;
     }
-    .overview-container img {
+    .overview-container > img {
         width: 4em;
         border-radius: 4px;
         margin: 0.5em 0;
