--- a/css/archives.css
+++ b/css/archives.css
@@ -31,6 +31,7 @@
         width: fit-content;
         top: 0;
         right: 0;
+        padding-right: 1em;
     }
     #completedImg {
         width: 2em;
