--- a/css/archives.css
+++ b/css/archives.css
@@ -31,7 +31,7 @@
         width: fit-content;
         top: 0;
         right: 0;
-        padding-right: 0.5em;
+        padding: 0.5em 0.5em 0 0;
     }
     #completedImg {
         width: 2em;
