--- a/css/project.css
+++ b/css/project.css
@@ -96,7 +96,7 @@
     .reverse-archive-button:hover > a {
         color: var(--accent-2);
     }
-    .warning-wrapper, .completed-wrapper {
+    .warning-wrapper {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -105,6 +105,12 @@
     }
     .warning-wrapper > h2 {
         color: var(--warning);
+    }
+    .completed-wrapper {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        margin-bottom: 1em;
     }
     .completed-wrapper > h2 {
         color: var(--accent-3);
