--- a/css/project.css
+++ b/css/project.css
@@ -108,12 +108,13 @@
     }
     .completed-wrapper {
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
         margin-bottom: 1em;
     }
     .completed-wrapper > h2 {
         color: var(--accent-3);
+        margin: 0 1em;
     }
     #completedImg {
         width: 3em;
