--- a/css/profile.css
+++ b/css/profile.css
@@ -25,6 +25,7 @@
     #profileOverlay {
         position: absolute;
         z-index: 2;
+        width: 7em;
     }
     #profilePicture {
         width: 7em;
