--- a/css/style.css
+++ b/css/style.css
@@ -450,8 +450,7 @@ a {
     }
     #pfp-overlay {
         position: absolute;
-        top: 0;
-        right: 0;
+        z-index: 1;
     }
     .userDropdown {
         width: 20%;
