--- a/css/login.css
+++ b/css/login.css
@@ -96,8 +96,8 @@
         flex-direction: column;
         margin: 2.5em 0;
     }
-    #email {
-        margin-bottom: 2em;
+    #passwordLabel {
+        margin-top: 2em;
     }
     .show-password-wrapper {
         display: flex;
