--- a/css/settings.css
+++ b/css/settings.css
@@ -70,6 +70,7 @@
         justify-content: center;
         align-items: center;
         text-align: center;
+        text-decoration: none;
         width: 8em;
         height: 3.5em;
         background-color: var(--accent-2);
