--- a/css/progressBar.css
+++ b/css/progressBar.css
@@ -30,6 +30,12 @@
         z-index: 0;
         position: relative;
     }
+    .streak-fire {
+        position: absolute;
+        right: 0;
+        padding-right: 1em;
+        width: 2em;
+    }
     .border {
         width: 100%;
         height: 100%;
