--- a/css/announcements.css
+++ b/css/announcements.css
@@ -23,7 +23,10 @@
         text-align: center;
     }
     .announce-contents p {
-    font-size: 20px;
+        font-size: 20px;
+    }
+    .announce-contents li {
+        font-size: 20px;
     }
     .sign-off {
     display: flex;
