--- a/css/announcements.css
+++ b/css/announcements.css
@@ -29,10 +29,10 @@
         font-size: 20px;
     }
     .sign-off {
-    display: flex;
-    margin: 1em 0;
-    width: 100%;
-    justify-content: flex-end;
+        display: flex;
+        margin: 1em 0 2em 0;
+        width: 100%;
+        justify-content: flex-end;
     }
     .spin {
         width: 20em;
