--- a/css/announcements.css
+++ b/css/announcements.css
@@ -7,7 +7,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 70vh;
+        /* height: 70vh; */
         align-items: center;
         /* justify-content: center; */
     }
