--- a/css/login.css
+++ b/css/login.css
@@ -130,6 +130,16 @@
         align-items: center;
         margin-top: 1em;
     }
+    .form-select {
+        width: 100%;
+        height: 3em;
+        background-color: var(--accent-1);
+        color: var(--text-color);
+        border: var(--accent-3) solid 2px;
+        border-radius: 4px;
+        accent-color: var(--background-color);
+        padding: 8px;
+    }
     .fav-content {
         display: flex;
         justify-content: space-evenly;
@@ -144,6 +154,7 @@
         padding: 8px;
         resize: vertical;
         margin-bottom: 2em;
+        border-radius: 4px;
     }
     .favs, .reset-input {
         background-color: var(--accent-1);
@@ -153,6 +164,7 @@
         height: 2.7em;
         margin: 0.5em 0;
         padding: 8px;
+        border-radius: 4px;
         resize: vertical;
     }
     .button-right {
