--- a/css/login.css
+++ b/css/login.css
@@ -301,7 +301,7 @@
     }
 }
 @media only screen and (min-width: 1200px) {
-    .input, .input-login, #bio, .favs, .reset-input {
+    .input, .input-login, #bio, .favs, .reset-input, .form-select {
         background-color: var(--background-color);
         border: 2px solid var(--accent-3);
         color: var(--accent-2);
