--- a/css/settings.css
+++ b/css/settings.css
@@ -43,7 +43,7 @@
     .tabcontent {
         display: none;
         width: 100%;
-        height: 18em;
+        height: 24em;
     }
 
 
@@ -168,6 +168,7 @@
         border-radius: 4px;
         accent-color: var(--background-color);
         padding: 8px;
+        padding-left: 2em;
     }
     .form-content {
         display: flex;
