--- a/css/settings.css
+++ b/css/settings.css
@@ -160,6 +160,9 @@
         accent-color: var(--background-color);
         padding: 8px;
     }
+    .timezone {
+        padding-left: 2em;
+    }
     .form-select {
         width: 70%;
         background-color: var(--background-color);
@@ -168,7 +171,6 @@
         border-radius: 4px;
         accent-color: var(--background-color);
         padding: 8px;
-        padding-left: 2em;
     }
     .form-content {
         display: flex;
