--- a/css/style.css
+++ b/css/style.css
@@ -329,6 +329,16 @@ a {
     .mobileNav:hover .navMenu {
         display: block;
     }
+    .popup {
+        display: none;
+        z-index: 10;
+        position: absolute;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px);
+    }
 
 
     /** BADGE POPUPS*/
