--- a/css/home.css
+++ b/css/home.css
@@ -25,6 +25,16 @@
     .fa-caret-down {
         margin-left: 0.5em;
     }
+    .timezone-popup-wrapper {
+        display: flex;
+        z-index: 10;
+        position: absolute;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px);
+    }
     .project-select-popup-wrapper {
         display: none;
         z-index: 10;
