--- a/css/home.css
+++ b/css/home.css
@@ -35,6 +35,19 @@
         -webkit-backdrop-filter: blur(5px);
         backdrop-filter: blur(5px);
     }
+    .timezone-popup {
+        position: relative;
+        display: flex;
+        z-index: 1;
+        flex-direction: column;
+        height: fit-content;
+        width: 90%;
+        background-color: var(--accent-1);
+        border: 2px solid var(--accent-3);
+        border-radius: 16px;
+        padding: 1em;
+        margin-top: 6em;
+    }
     .project-select-popup-wrapper {
         display: none;
         z-index: 10;
