--- a/css/style.css
+++ b/css/style.css
@@ -329,7 +329,7 @@ a {
     .mobileNav:hover .navMenu {
         display: block;
     }
-    .popup {
+    /* .popup {
         display: none;
         z-index: 10;
         position: absolute;
@@ -338,7 +338,7 @@ a {
         height: 100%;
         -webkit-backdrop-filter: blur(5px);
         backdrop-filter: blur(5px);
-    }
+    } */
 
 
     /** BADGE POPUPS*/
