--- a/css/home.css
+++ b/css/home.css
@@ -48,6 +48,17 @@
         padding: 1em;
         margin-top: 6em;
     }
+    .form-select {
+        width: 100%;
+        height: 3em;
+        background-color: var(--accent-1);
+        color: var(--text-color);
+        border: var(--accent-3) solid 2px;
+        border-radius: 4px;
+        accent-color: var(--background-color);
+        padding: 8px;
+        margin-bottom: 2em;
+    }
     .project-select-popup-wrapper {
         display: none;
         z-index: 10;
