--- a/css/home.css
+++ b/css/home.css
@@ -53,10 +53,11 @@
         height: 3em;
         background-color: var(--background-color);
         color: var(--text-color);
-        border: var(--accent-2) solid 2px;
+        border: var(--accent-3) solid 2px;
         border-radius: 4px;
         accent-color: var(--background-color);
         padding: 8px;
+        margin-bottom: 2em;
     }
     .project-select-popup-wrapper {
         display: none;
