--- a/css/home.css
+++ b/css/home.css
@@ -59,6 +59,9 @@
         padding: 8px;
         margin-bottom: 2em;
     }
+    #timezone-title {
+        font-size: 24px;
+    }
     .project-select-popup-wrapper {
         display: none;
         z-index: 10;
