--- a/css/home.css
+++ b/css/home.css
@@ -61,6 +61,7 @@
     }
     #timezone-title {
         font-size: 28px;
+        margin-bottom: 2em;
     }
     .project-select-popup-wrapper {
         display: none;
