--- a/css/home.css
+++ b/css/home.css
@@ -549,6 +549,9 @@
 
 /**TABLET PORTRAIT*/
 @media only screen and (min-width: 720px) {
+    .timezone-popup {
+        width: 60%;
+    }
     .project-select-wrapper {
         padding-right: 2em;
     }
