--- a/css/home.css
+++ b/css/home.css
@@ -61,6 +61,7 @@
     }
     #timezone-title {
         font-size: 28px;
+        text-align: center;
         margin-bottom: 1em;
     }
     .project-select-popup-wrapper {
