--- a/css/login.css
+++ b/css/login.css
@@ -254,6 +254,10 @@
         align-items: center;
         padding-top: 2em;
     }
+
+    #instruct {
+        margin-bottom: 1em;
+    }
 }
 @media only screen and (min-width: 720px) {
     .login-container, .profile-wrapper, .reset-content {
