--- a/css/contact.css
+++ b/css/contact.css
@@ -54,6 +54,55 @@
     .fail {
         color: var(--warning);
     }
+
+
+/** Captcha */
+    .captchaPopupWrapper {
+        display: flex;
+        z-index: 10;
+        position: absolute;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px);
+    }
+    #image {
+        margin-top: 10px;
+        box-shadow: 5px 5px 5px 5px gray;
+        width: 60px;;
+        padding: 20px;
+        font-weight: 400;
+        padding-bottom: 0px;
+        height: 40px;
+        user-select: none;
+        text-decoration:line-through;
+        font-style: italic;
+        font-size: x-large;
+        border: red 2px solid;
+        margin-left: 10px;  
+    }
+    #user-input {
+        box-shadow: 5px 5px 5px 5px gray;
+        width:auto;
+        margin-right: 10px;
+        padding: 10px;
+        padding-bottom: 0px;
+        height: 40px;
+        border: red 0px solid;
+    }
+    input {
+        border:1px black solid;
+    }
+    .inline {
+        display:inline-block;
+    }
+    #btn {
+        box-shadow: 5px 5px 5px grey;
+        color: aqua;
+        margin: 10px;
+        background-color: brown;
+    }
 }
 
 
