--- a/css/contact.css
+++ b/css/contact.css
@@ -67,6 +67,16 @@
         -webkit-backdrop-filter: blur(5px);
         backdrop-filter: blur(5px);
     }
+    .captchPopup {
+        position: relative;
+        height: fit-content;
+        width: 90%;
+        background-color: var(--accent-1);
+        border: 2px solid var(--accent-3);
+        border-radius: 16px;
+        padding: 1em;
+        margin-top: 6em;
+    }
     #image {
         margin-top: 10px;
         box-shadow: 5px 5px 5px 5px gray;
