--- a/css/contact.css
+++ b/css/contact.css
@@ -80,7 +80,7 @@
     #captchaBackground {
         height: 220px;
         width: 250px;
-        /* background-color: #2d3748; */
+        background-color: #2d3748;
         display: flex;
         align-items: center;
         justify-content: center;
