--- a/css/contact.css
+++ b/css/contact.css
@@ -104,13 +104,13 @@
     #submitButton {
         margin-top: 2em;
         margin-bottom: 2em;
-        background-color: var(--accent-3);
+        background-color: #08e5ff;
         border: 0px;
         font-weight: bold;
     }
 
     #refreshButton {
-        background-color: var(--accent-3);
+        background-color: #08e5ff;
         border: 0px;
         font-weight: bold;
     }
