--- a/css/competition.css
+++ b/css/competition.css
@@ -44,31 +44,6 @@
     .close-wrapper {
         cursor: pointer;
     }
-    /* .option-wrapper {
-        display: flex;
-        justify-content: space-evenly;
-    }
-    .choose-league {
-        -webkit-appearance: none;
-        appearance: none;
-        color: var(--background-color);
-        width: 1.5em;
-        height: 1.5em;
-        border: 0.15em solid var(--accent-3);
-        border-radius: 50%;
-    }
-    .choose-league::before {
-        content: "";
-    width: 0.65em;
-    height: 0.65em;
-    border-radius: 50%;
-    transform: scale(0);
-    transition: 120ms transform ease-in-out;
-    box-shadow: inset 1em 1em var(--background-color);
-    }
-    .choose-league:checked::before {
-        transform: scale(1);
-    } */
     .option-wrapper {
         display: flex;
         flex-direction: column;
@@ -78,7 +53,7 @@
     .radio {
         padding: 0.7em;
     }
-    .radio-wrapper-9 input[type=radio] {
+    /* .radio-wrapper-9 input[type=radio] {
         display: none;
         appearance: none;
     }
@@ -128,7 +103,7 @@
         border: 2px solid var(--accent-2);
         border-radius: 16px;
         cursor: pointer;
-    }
+    } */
 
 
     .global-wrapper {
