--- a/css/competition.css
+++ b/css/competition.css
@@ -48,7 +48,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        padding-left: 4em;
+        /* padding-left: 4em; */
     }
     .radio {
         padding: 0.7em;
