--- a/css/competition.css
+++ b/css/competition.css
@@ -48,7 +48,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        padding: 0 1em;
+        padding: 0 1em 0.5em 1em;
     }
     /* .radio {
         padding: 0.7em;
